<resources>
    <string name="app_name">Code Tracker</string>
    <string name="welcome">Welcome to Code Tracker!</string>
    <string name="start_tracking_your_code">Tap anywhere to get started with an efficient code tracking experience</string>
    <string name="image">Image</string>
    <string name="enter_details">Enter Details</string>
    <string name="view_insights">View Insights</string>
    <string name="view_details">View Session Details</string>
    <string name="select_option">What would you like to do today?</string>
    <string name="enter_details_desc">You can enter all the details of your coding practice session here; Time and space complexity of your solution, duration of the session, the problem description, a link to the problem, and a lot more data!</string>
    <string name="view_insights_desc">View insights compiled from all your recorded sessions.</string>
    <string name="view_details_desc">View the data from all your previously recorded practice sessions here.</string>
    <string name="enter_session_details">Enter Session Details</string>
    <string name="enter_problem_title">What\'s the problem title? *</string>
    <string name="problem_hint">Example: Add Two Numbers</string>
    <string name="enter_problem_desc">Describe the problem here</string>
    <string name="problem_desc_hint" />
    <string name="enter_problem_site">On which site did you find this problem? *</string>
    <string name="problem_site_hint">Leetcode, TopCoder, etc.</string>
    <string name="enter_problem_link">You can add a link to the problem/site here</string>
    <string name="problem_link_hint" />
    <string name="enter_problem_level">Was the problem Easy, Medium, or Difficult? *</string>
    <string name="problem_level_hint">Example: Easy</string>
    <string name="enter_solution_desc">You can explain your solution here</string>
    <string name="solution_desc_hint" />
    <string name="enter_solution_time_complexity">What was the time complexity of your solution?</string>
    <string name="solution_time_complexity_hint">Example: O(N)</string>
    <string name="enter_solution_space_complexity">What was the space complexity of your solution?</string>
    <string name="solution_space_complexity_hint">Example: O(N)</string>
    <string name="enter_solution_date">When did you solve or attempt this problem? *</string>
    <string name="solution_date_hint">mm/dd/yyyy</string>
    <string name="enter_solution_time">How long did this take you to solve? (In minutes) *</string>
    <string name="solution_time_hint">Example: 60</string>
    <string name="save_data">Save</string>
    <string name="required_questions">* indicates required questions</string>
    <string name="data_validation_error">Please check the data entered in the required fields</string>
    <string name="success_data_saved">All done! \n Your session data was saved successfully.</string>
    <string name="failure_data_saved">Uh Oh! \n Looks like something went wrong. Please try again later.</string>
    <string name="view_sessions">View Saved Sessions</string>
    <string name="no_sessions">You haven\'t saved any session data yet.</string>
    <string name="session_view_site">%s \t\t</string>
    <string name="session_view_date">\t %s</string>
    <string name="delete">Delete Session</string>
    <string name="delete_session">Delete \'%s\' ?</string>
    <string name="time_taken">%d minutes</string>
    <string name="problem">Question: %s</string>
    <string name="solution">Solution: %s</string>
    <string name="space">%s space complexity</string>
    <string name="time">%s time complexity</string>
    <string name="database_error">Something\'s not right! Please try again later.</string>
    <string name="chart_level_count">Number of Questions of Each Level</string>
    <string name="chart_level_time">Average Time Spent for Questions of Each Level</string>
    <string name="chart_site_count">Number of Questions from Each Site</string>
    <string name="avg_sessions">Average Number of Questions Solved Per Day: %.2f</string>
    <string name="total_number">Total Number of Questions Solved : %d</string>
    <string name="no_insights">You haven\'t saved enough data to display insights</string>

</resources>