<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <androidx.cardview.widget.CardView
      android:id="@+id/cv_header"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" >

      <TextView
        android:id="@+id/tv_header_view_insights"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_insights"
        android:fontFamily="@font/sharp_sans_no1_semibold"
        android:textSize="@dimen/large_text_18_sp"
        android:textAlignment="center"
        android:layout_margin="@dimen/margin_16_dp" />

    </androidx.cardview.widget.CardView>

    <View
      android:id="@+id/divider"
      app:layout_constraintTop_toBottomOf="@id/cv_header"
      android:layout_width="match_parent"
      android:layout_height="@dimen/divider_height_1_dp"
      android:background="@color/colorPrimaryDark"/>

    <TextView
      android:visibility="gone"
      android:id="@+id/tv_no_insights"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/divider"
      android:text="@string/no_insights"
      android:fontFamily="@font/sharp_sans_no1_medium"
      android:textSize="@dimen/medium_large_text_16sp"
      android:gravity="center"
      android:padding="@dimen/margin_16_dp" />

    <TextView
      android:id="@+id/tv_total_count"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/divider"
      android:text="@string/total_number"
      android:textSize="@dimen/medium_large_text_16sp"
      android:padding="@dimen/margin_8_dp"
      android:gravity="center_vertical"
      android:fontFamily="@font/sharp_sans_no1_semibold" />

    <TextView
      android:id="@+id/tv_avg_number_sessions"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/tv_total_count"
      android:text="@string/avg_sessions"
      android:textSize="@dimen/medium_large_text_16sp"
      android:padding="@dimen/margin_8_dp"
      android:gravity="center_vertical"
      android:fontFamily="@font/sharp_sans_no1_semibold" />

    <View
      android:id="@+id/divider_1"
      app:layout_constraintTop_toBottomOf="@id/tv_avg_number_sessions"
      android:layout_width="match_parent"
      android:layout_height="@dimen/divider_height_1_dp"
      android:background="@color/colorPrimaryDark"/>

    <TextView
      android:id="@+id/tv_level_count_header"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/divider_1"
      android:text="@string/chart_level_count"
      android:textSize="@dimen/medium_large_text_16sp"
      android:padding="@dimen/margin_8_dp"
      android:textAlignment="center"
      android:gravity="center"
      android:fontFamily="@font/sharp_sans_no1_medium"
      android:textColor="@color/black" />

    <com.github.mikephil.charting.charts.PieChart
      android:id="@+id/chart_level_count"
      android:layout_width="match_parent"
      android:layout_height="@dimen/chart_height"
      android:layout_marginTop="@dimen/margin_8_dp"
      app:layout_constraintTop_toBottomOf="@id/tv_level_count_header"/>

    <View
      android:id="@+id/divider_2"
      app:layout_constraintTop_toBottomOf="@id/chart_level_count"
      android:layout_width="match_parent"
      android:layout_height="@dimen/divider_height_1_dp"
      android:background="@color/colorPrimaryDark"/>

    <TextView
      android:id="@+id/tv_level_time_header"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/divider_2"
      android:text="@string/chart_level_time"
      android:textSize="@dimen/medium_large_text_16sp"
      android:padding="@dimen/margin_8_dp"
      android:textAlignment="center"
      android:gravity="center"
      android:fontFamily="@font/sharp_sans_no1_medium"
      android:textColor="@color/black" />

    <com.github.mikephil.charting.charts.PieChart
      android:id="@+id/chart_level_time"
      android:layout_width="match_parent"
      android:layout_height="@dimen/chart_height"
      android:layout_marginTop="@dimen/margin_8_dp"
      app:layout_constraintTop_toBottomOf="@id/tv_level_time_header"/>

    <View
      android:id="@+id/divider_3"
      app:layout_constraintTop_toBottomOf="@id/chart_level_time"
      android:layout_width="match_parent"
      android:layout_height="@dimen/divider_height_1_dp"
      android:background="@color/colorPrimaryDark"/>

    <TextView
      android:id="@+id/tv_site_count_header"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/divider_3"
      android:text="@string/chart_site_count"
      android:textSize="@dimen/medium_large_text_16sp"
      android:padding="@dimen/margin_8_dp"
      android:textAlignment="center"
      android:gravity="center"
      android:fontFamily="@font/sharp_sans_no1_medium"
      android:textColor="@color/black" />

    <com.github.mikephil.charting.charts.PieChart
      android:id="@+id/chart_site_count"
      android:layout_width="match_parent"
      android:layout_height="@dimen/chart_height"
      android:layout_marginTop="@dimen/margin_8_dp"
      app:layout_constraintTop_toBottomOf="@id/tv_site_count_header"/>

  </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>