<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  android:layout_height="wrap_content"
  android:layout_width="match_parent"
  android:scrollbars="none"
  android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android" >

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
      android:id="@+id/cv_header"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" >

      <TextView
        android:id="@+id/tv_header_select_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_option"
        android:fontFamily="@font/sharp_sans_no1_semibold"
        android:textSize="@dimen/large_text_18_sp"
        android:textAlignment="center"
        android:layout_margin="@dimen/margin_16_dp"
        />

    </androidx.cardview.widget.CardView>

    <View
      android:id="@+id/divider"
      app:layout_constraintTop_toBottomOf="@id/cv_header"
      android:layout_width="match_parent"
      android:layout_height="@dimen/divider_height_1_dp"
      android:background="@color/colorPrimaryDark"/>

    <androidx.cardview.widget.CardView
      android:id="@+id/cv_enter_details"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toTopOf="@id/divider"
      android:background="@color/offWhite"
      android:layout_marginHorizontal="@dimen/margin_16_dp"
      android:layout_marginVertical="@dimen/margin_32_dp" >

      <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
          android:id="@+id/btn_enter_details"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/margin_16_dp"
          android:padding="@dimen/margin_16_dp"
          android:background="@drawable/button_states"
          android:text="@string/enter_details"
          android:textSize="@dimen/button_text_16_sp"
          android:fontFamily="@font/sharp_sans_no1_bold" />

        <TextView
          android:id="@+id/tv_enter_details_desc"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/margin_16_dp"
          android:layout_marginHorizontal="@dimen/margin_16_dp"
          android:fontFamily="@font/sharp_sans_no1_semibold"
          android:text="@string/enter_details_desc"
          android:textSize="@dimen/medium_text_14_sp" />

      </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
      android:id="@+id/cv_start_timer"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/cv_enter_details"
      app:layout_constraintBottom_toTopOf="@id/cv_view_insights"
      android:background="@color/offWhite"
      android:layout_marginHorizontal="@dimen/margin_16_dp"
      android:layout_marginVertical="@dimen/margin_32_dp" >

      <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
          android:id="@+id/btn_start_timer"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/margin_16_dp"
          android:padding="@dimen/margin_16_dp"
          android:background="@drawable/button_states"
          android:text="@string/start_timer"
          android:textSize="@dimen/button_text_16_sp"
          android:fontFamily="@font/sharp_sans_no1_bold" />

        <TextView
          android:id="@+id/tv_start_timer_desc"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/margin_16_dp"
          android:layout_marginHorizontal="@dimen/margin_16_dp"
          android:fontFamily="@font/sharp_sans_no1_semibold"
          android:text="@string/start_timer_desc"
          android:textSize="@dimen/medium_text_14_sp" />

      </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
      android:id="@+id/cv_view_insights"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="parent"
      android:background="@color/offWhite"
      android:layout_marginHorizontal="@dimen/margin_16_dp"
      android:layout_marginVertical="@dimen/margin_32_dp" >

      <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
          android:id="@+id/btn_view_insights"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/margin_16_dp"
          android:padding="@dimen/margin_16_dp"
          android:background="@drawable/button_states"
          android:text="@string/view_insights"
          android:textSize="@dimen/button_text_16_sp"
          android:fontFamily="@font/sharp_sans_no1_bold" />

        <TextView
          android:id="@+id/tv_view_insights_desc"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/margin_16_dp"
          android:layout_marginHorizontal="@dimen/margin_16_dp"
          android:fontFamily="@font/sharp_sans_no1_semibold"
          android:text="@string/view_insights_desc"
          android:textSize="@dimen/medium_text_14_sp" />

      </LinearLayout>

    </androidx.cardview.widget.CardView>

  </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>